self-host/fixtures/invalid/bounded-forall.bclj
#lang beagle/clj
(ns bounded-forall.test)

;; A bounded forall (T <: Number) rejects a call whose inferred binding
;; violates the bound. Here T is inferred String from the argument, which is
;; not a subtype of Number — the oracle raises a bound diagnostic. A self-host
;; that drops the bound entry would wrongly accept.
(def pick :- (forall [(T <: Number)] [T -> T])
  (fn [x :- Any] :- Any x))

(defn run [] :- String
  (pick "not-a-number"))
